wotking on the result titles and styling

--- a/index.html
+++ b/index.html
@@ -70,15 +70,21 @@
       </form>
     </section>
     <section id="wageResults" class="wage_results">
-      <p id="upFrontHourly"></p>
-      <p id="upFrontBiWeekly"></p>
-      <p id="upFrontYearly"></p>
-      <p id="yearOneHourly"></p>
-      <p id="yearOneBiWeekly"></p>
-      <p id="yearOneYearly"></p>
-      <p id="yearTwoHourly"></p>
-      <p id="yearTwoBiWeekly"></p>
-      <p id="yearTwoYearly"></p>
+        <div id="upFrontContainer" class="results_container">
+            <p id="upFrontHourly"></p>
+            <p id="upFrontBiWeekly"></p>
+            <p id="upFrontYearly"></p>
+        </div>
+        <div id="yearOneContainer" class="results_container">
+            <p id="yearOneHourly"></p>
+            <p id="yearOneBiWeekly"></p>
+            <p id="yearOneYearly"></p>
+        </div>
+        <div id="yearTwoContainer" class="results_container">
+            <p id="yearTwoHourly"></p>
+            <p id="yearTwoBiWeekly"></p>
+            <p id="yearTwoYearly"></p>
+        </div>
     </section>
     <script src="src/calculator.js"></script>
   </body>
