--- a/index.html
+++ b/index.html
@@ -65,24 +65,24 @@
           <section id="wageResults" class="wage_results_inactive">
                <h2 class="wage_results_tile">Your Wage Results</h2> 
               <div id="upFrontContainer" class="results_container">
-                <h3 id="upFrontTitle" class="results_contatiner_title">
-                    Your Upfront Wage Raise by: 
+                <h3 id="upFrontTitle" class="results_container_title">
+                    Your Upfront Wage Raise by: <span id="upFrontP" class="results_number"></span>
                 </h3>
                   <p id="upFrontHourly"></p>
                   <p id="upFrontBiWeekly"></p>
                   <p id="upFrontYearly"></p>
               </div>
               <div id="yearOneContainer" class="results_container">
-                <h3 id="yearOneTitle" class="results_contatiner_title">
-                    Your Year One Wage Raise by: 
+                <h3 id="yearOneTitle" class="results_container_title">
+                    Your Year One Wage Raise by: <span id="yearOneP" class="results_number"></span>
                 </h3>
                   <p id="yearOneHourly"></p>
                   <p id="yearOneBiWeekly"></p>
                   <p id="yearOneYearly"></p>
               </div>
               <div id="yearTwoContainer" class="results_container">
-                <h3 id="yearTwoTitle"class="results_contatiner_title">
-                    Your Year Two Wage Raise by: 
+                <h3 id="yearTwoTitle"class="results_container_title">
+                    Your Year Two Wage Raise by: <span id="yearTwoP" class="results_number"></span>
                 </h3>
                   <p id="yearTwoHourly"></p>
                   <p id="yearTwoBiWeekly"></p>
