--- a/index.html
+++ b/index.html
@@ -92,6 +92,6 @@
               </div>
           </section>
     </main>
-    <script src="src/calculator.js"></script>
+    <script src="/src/calculator.js"></script>
   </body>
 </html>
