made some changes to wageResults section

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
           </section>
           <section id="wageResults" class="wage_results_inactive">
                <h2 class="wage_results_tile">Your Wage Results (Pre-Tax & Benefits)</h2> 
-               <h4 id="initWage"></h4>
-               <h4 id="initHours"></h4>
+               <h4 id="initWage" class="initial_title"></h4>
+               <h4 id="initHours" class="initial_title"></h4>
               <div id="upFrontContainer" class="results_container">
                 <h3 id="upFrontTitle" class="results_container_title">
                     Your Upfront Wage Raise by: <span id="upFrontP" class="results_number"></span>
