--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/calculator.css" />
+    <link rel="stylesheet" href="/wage-calculator/src/calculator.css" />
     <title>Wage Calculator</title>
   </head>
   <body>
@@ -92,6 +92,6 @@
               </div>
           </section>
     </main>
-    <script src="/src/calculator.js"></script>
+    <script src="/wage-calculator/src/calculator.js"></script>
   </body>
 </html>
