--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,86 +11,101 @@
       <h1 class="calc-title">Wage Calculator</h1>
     </header>
     <main>
-        <section class="wage_form_container">
-            <form id="wageForm" class="wage_form">
-              <fieldset>
-                <legend class="wage_form_legend">Initial Wage & Hours</legend>
-                <div class="wage_form_group">
-                  <label for="hourly">Hourly Wage</label>
-                  <input
-                    type="text"
-                    id="hourly"
-                    placeholder="Enter your Hourly Wage"
-                  />
-                </div>
-                <div class="wage_form_group">
-                  <label for="biWeekly">Bi-Weekly Hours</label>
-                  <input
-                    type="text"
-                    id="biWeekly"
-                    placeholder="Enter your bi-weekly hours total"
-                  />
-                </div>
-              </fieldset>
-              <fieldset>
-                <legend class="wage_form_legend">Raises</legend>
-                <div class="wage_form_group">
-                  <label for="upfrontRaise">Upfront Raise (in percent as a whole number)</label>
-                  <input
-                    type="text"
-                    id="upfrontRaise"
-                    placeholder="Please enter the upfront raise in percentage"
-                  />
-                </div>
-                <div class="wage_form_group">
-                  <label for="yearOneRaise"> Year One Raise (in percent as a whole number)</label>
-                  <input
-                    type="text"
-                    id="yearOneRaise"
-                    placeholder="Please enter the year one raise in percentage"
-                  />
-                </div>
-                <div class="wage_form_group">
-                  <label for="yearTwoRaise">Year Two Raise (in percent as a whole number)</label>
-                  <input
-                    type="text"
-                    id="yearTwoRaise"
-                    placeholder="Please enter the year two raise in percentage"
-                  />
-                </div>
-              </fieldset>
-              <button class="wage_form_button">Submit</button>
-            </form>
-          </section>
-          <section id="wageResults" class="wage_results_inactive">
-               <h2 class="wage_results_tile">Your Wage Results (Pre-Tax & Benefits)</h2> 
-               <h4 id="initWage" class="initial_title"></h4>
-               <h4 id="initHours" class="initial_title"></h4>
-              <div id="upFrontContainer" class="results_container">
-                <h3 id="upFrontTitle" class="results_container_title">
-                    Your Upfront Wage Raise by: <span id="upFrontP" class="results_number"></span>
-                </h3>
-                  <p id="upFrontHourly"></p>
-                  <p id="upFrontBiWeekly"></p>
-                  <p id="upFrontYearly"></p>
-              </div>
-              <div id="yearOneContainer" class="results_container">
-                <h3 id="yearOneTitle" class="results_container_title">
-                    Your Year One Wage Raise by: <span id="yearOneP" class="results_number"></span>
-                </h3>
-                  <p id="yearOneHourly"></p>
-                  <p id="yearOneBiWeekly"></p>
-                  <p id="yearOneYearly"></p>
-              </div>
-              <div id="yearTwoContainer" class="results_container">
-                <h3 id="yearTwoTitle"class="results_container_title">
-                    Your Year Two Wage Raise by: <span id="yearTwoP" class="results_number"></span>
-                </h3>
-                  <p id="yearTwoHourly"></p>
-                  <p id="yearTwoBiWeekly"></p>
-                  <p id="yearTwoYearly"></p>
-              </div>
-          </section>
+      <section class="wage_form_container">
+        <form id="wageForm" class="wage_form">
+          <fieldset>
+            <legend class="wage_form_legend">Initial Wage & Hours</legend>
+            <div class="wage_form_group">
+              <label for="hourly">Hourly Wage</label>
+              <input
+                type="text"
+                id="hourly"
+                placeholder="Enter your Hourly Wage"
+              />
+            </div>
+            <div class="wage_form_group">
+              <label for="biWeekly">Bi-Weekly Hours</label>
+              <input
+                type="text"
+                id="biWeekly"
+                placeholder="Enter your bi-weekly hours total"
+              />
+            </div>
+          </fieldset>
+          <fieldset>
+            <legend class="wage_form_legend">Raises</legend>
+            <div class="wage_form_group">
+              <label for="upfrontRaise"
+                >Upfront Raise (in percent as a whole number)</label
+              >
+              <input
+                type="text"
+                id="upfrontRaise"
+                placeholder="Please enter the upfront raise in percentage"
+              />
+            </div>
+            <div class="wage_form_group">
+              <label for="yearOneRaise">
+                Year One Raise (in percent as a whole number)</label
+              >
+              <input
+                type="text"
+                id="yearOneRaise"
+                placeholder="Please enter the year one raise in percentage"
+              />
+            </div>
+            <div class="wage_form_group">
+              <label for="yearTwoRaise"
+                >Year Two Raise (in percent as a whole number)</label
+              >
+              <input
+                type="text"
+                id="yearTwoRaise"
+                placeholder="Please enter the year two raise in percentage"
+              />
+            </div>
+          </fieldset>
+          <button type="submit" class="wage_form_button">Submit</button>
+        </form>
+      </section>
+      <section id="wageResults" class="wage_results_inactive">
+        <h2 class="wage_results_tile">
+          Your Wage Results (Pre-Tax & Benefits)
+        </h2>
+        <h4 class="initial_title">
+          Your Initial Wage:<span id="initWage"></span>
+        </h4>
+        <h4 class="initial_title">
+          Your Bi-Weekly Hours: <span id="initHours"></span>
+        </h4>
+        <div id="upFrontContainer" class="results_container">
+          <h3 id="upFrontTitle" class="results_container_title">
+            Your Upfront Wage Raise by:
+            <span id="upFrontP" class="results_number"></span>
+          </h3>
+          <p id="upFrontHourly"></p>
+          <p id="upFrontBiWeekly"></p>
+          <p id="upFrontYearly"></p>
+        </div>
+        <div id="yearOneContainer" class="results_container">
+          <h3 id="yearOneTitle" class="results_container_title">
+            Your Year One Wage Raise by:
+            <span id="yearOneP" class="results_number"></span>
+          </h3>
+          <p id="yearOneHourly"></p>
+          <p id="yearOneBiWeekly"></p>
+          <p id="yearOneYearly"></p>
+        </div>
+        <div id="yearTwoContainer" class="results_container">
+          <h3 id="yearTwoTitle" class="results_container_title">
+            Your Year Two Wage Raise by:
+            <span id="yearTwoP" class="results_number"></span>
+          </h3>
+          <p id="yearTwoHourly"></p>
+          <p id="yearTwoBiWeekly"></p>
+          <p id="yearTwoYearly"></p>
+        </div>
+      </section>
     </main>
     <script src="src/calculator.js"></script>
   </body>
