added some styling

--- a/index.html
+++ b/index.html
@@ -83,27 +83,33 @@
             Your Upfront Wage Raise by:
             <span id="upFrontP" class="results_number"></span>
           </h3>
-          <p id="upFrontHourly"></p>
-          <p id="upFrontBiWeekly"></p>
-          <p id="upFrontYearly"></p>
+          <div class="results_info">
+            <p id="upFrontHourly"></p>
+            <p id="upFrontBiWeekly"></p>
+            <p id="upFrontYearly"></p>
+          </div>
         </div>
         <div id="yearOneContainer" class="results_container">
           <h3 id="yearOneTitle" class="results_container_title">
             Your Year One Wage Raise by:
             <span id="yearOneP" class="results_number"></span>
           </h3>
-          <p id="yearOneHourly"></p>
-          <p id="yearOneBiWeekly"></p>
-          <p id="yearOneYearly"></p>
+          <div class="results_info">
+            <p id="yearOneHourly"></p>
+            <p id="yearOneBiWeekly"></p>
+            <p id="yearOneYearly"></p>
+          </div>
         </div>
         <div id="yearTwoContainer" class="results_container">
           <h3 id="yearTwoTitle" class="results_container_title">
             Your Year Two Wage Raise by:
             <span id="yearTwoP" class="results_number"></span>
           </h3>
-          <p id="yearTwoHourly"></p>
-          <p id="yearTwoBiWeekly"></p>
-          <p id="yearTwoYearly"></p>
+          <div class="results_info">
+            <p id="yearTwoHourly"></p>
+            <p id="yearTwoBiWeekly"></p>
+            <p id="yearTwoYearly"></p>
+          </div>
         </div>
       </section>
     </main>
