pushing to save changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <input
                 type="text"
                 id="hourly"
-                placeholder="Enter your Hourly Wage"
+                placeholder="Please enter your Hourly Wage"
               />
             </div>
             <div class="wage_form_group">
@@ -28,7 +28,7 @@
               <input
                 type="text"
                 id="biWeekly"
-                placeholder="Enter your bi-weekly hours total"
+                placeholder="Please enter your bi-weekly hours total"
               />
             </div>
           </fieldset>
