added year three to match proposal

--- a/index.html
+++ b/index.html
@@ -64,6 +64,16 @@
                 placeholder="Please enter the year two raise in percentage"
               />
             </div>
+            <div class="wage_form_group">
+              <label for="yearThreeRaise"
+                >Year Three Raise (in percent as a whole number)</label
+              >
+              <input
+                type="text"
+                id="yearThreeRaise"
+                placeholder="Please enter the year two raise in percentage"
+              />
+            </div>
           </fieldset>
           <button type="submit" class="wage_form_button">Submit</button>
         </form>
@@ -109,6 +119,17 @@
             <p id="yearTwoHourly"></p>
             <p id="yearTwoBiWeekly"></p>
             <p id="yearTwoYearly"></p>
+          </div>
+        </div>
+        <div id="yearThreeContainer" class="results_container">
+          <h3 id="yearThreeTitle" class="results_container_title">
+            Your Year Three Wage Raise by:
+            <span id="yearThreeP" class="results_number"></span>
+          </h3>
+          <div class="results_info">
+            <p id="yearThreeHourly"></p>
+            <p id="yearThreeBiWeekly"></p>
+            <p id="yearThreeYearly"></p>
           </div>
         </div>
       </section>
