tweaked form placeholder values

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <legend class="wage_form_legend">Raises</legend>
             <div class="wage_form_group">
               <label for="upfrontRaise"
-                >Upfront Raise (in percent as a whole number)</label
+                >Upfront Raise</label
               >
               <input
                 type="text"
@@ -46,7 +46,7 @@
             </div>
             <div class="wage_form_group">
               <label for="yearOneRaise">
-                Year One Raise (in percent as a whole number)</label
+                Year One Raise</label
               >
               <input
                 type="text"
@@ -56,7 +56,7 @@
             </div>
             <div class="wage_form_group">
               <label for="yearTwoRaise"
-                >Year Two Raise (in percent as a whole number)</label
+                >Year Two Raise</label
               >
               <input
                 type="text"
@@ -66,12 +66,12 @@
             </div>
             <div class="wage_form_group">
               <label for="yearThreeRaise"
-                >Year Three Raise (in percent as a whole number)</label
+                >Year Three Raise </label
               >
               <input
                 type="text"
                 id="yearThreeRaise"
-                placeholder="Please enter the year two raise in percentage"
+                placeholder="Please enter the year three raise in percentage"
               />
             </div>
           </fieldset>
